# dsm-unplugged

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml
anchor-core/: Cargo.toml  build.rs
anchor-core/src/: accept.rs  appliance.rs  domain.rs  hash.rs  lib.rs  proto.rs  root_advance.rs  service.rs  sig.rs  tropic.rs  util.rs
anchor-core/tests/: integration.rs
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
proto/: dsm_anchor.proto
tools/: anchor_host_test.py
